# RUST_ASCII_PROJECT

./: Cargo.toml  Makefile  README.md  example.csv  example.json  result.txt
src/: main  main.rs
