[package]
name = "proiect-ascii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
csv = "1.1.6"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
